--- a/HomeWork.html
+++ b/HomeWork.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +7,38 @@
     <title>HomeWork</title>
 </head>
 <body>
-    <h1>PHP学习站台列表</h1>
-    <p>推送清单<br>
+    <h1 title="Hello MDFK">PHP学习站台列表</h1>
+    <p style="color: darkviolet;">推送清单<br>
         <a href="https://php.onlinedoc.tw">PHP 无限</a><br>
-        <img src="./cute img.png" width="500" height="500" alt="cutie img">64</img>
+        <img src="./cute img.png" width="300" height="300" alt="cutie img">64</img>
     </p>
+    <h1 style="font: size 55px;">Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p style="background-color:rgb(0, 238, 255);
+              font-size: 20px;
+              color: maroon;">
+        This paragraph<br>
+        contains a lot of lines<br>
+        in the source code,<br>
+        but the browser<br>
+        ignores it.<br>
+        </p>
+        <hr>
+        <pre style="background-color: indianred;
+                    font-size: 20px;
+                    color: rgb(0, 253, 240);
+                    font-family: 'Courier New', Courier, monospace;
+                    text-align: left;">
+        This paragraph
+        contains         a lot of spaces
+        in the source         code,
+        but the        browser
+        ignores it.
+        </pre>
 </body>
 </html>
