--- a/HomeWork.html
+++ b/HomeWork.html
@@ -21,7 +21,8 @@
 
     <p style="background-color:rgb(0, 238, 255);
               font-size: 20px;
-              color: maroon;">
+              color: maroon;
+              text-align: center;">
         This paragraph<br>
         contains a lot of lines<br>
         in the source code,<br>
