--- a/HomeWork.html
+++ b/HomeWork.html
@@ -10,7 +10,7 @@
     <h1 title="Hello MDFK">PHP学习站台列表</h1>
     <p style="color: darkviolet;">推送清单<br>
         <a href="https://php.onlinedoc.tw">PHP 无限</a><br>
-        <img src="./cute img.png" width="300" height="300" alt="cutie img">64</img>
+        <img src="./funny.jpg" width="300" height="300" alt="cutie img">64</img>
     </p>
     <h1 style="font: size 55px;">Heading 1</h1>
     <h2>Heading 2</h2>
