--- a/HomeWork.html
+++ b/HomeWork.html
@@ -12,12 +12,16 @@
         <a href="https://php.onlinedoc.tw">PHP 无限</a><br>
         <img src="./funny.jpg" width="300" height="300" alt="cutie img">64</img>
     </p>
+    <p style="background-color: palegoldenrod;
+              text-align: center;
+              color: rgb(red, green, rgb(174, 0, 255));">
     <h1 style="font: size 55px;">Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
+    </p>
 
     <p style="background-color:rgb(0, 238, 255);
               font-size: 20px;
