--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 title="Hello MDFK">PHP学习站台列表</h1>
     <p style="color: rgb(255, 0, 0);">推送清单<br>
         <a href="https://php.onlinedoc.tw">PHP 无限</a><br>
-        <img src="./funny.jpg" width="300" height="300" alt="cutie img">64</img>
+        <img src="./funny.jpg" width="300" height="300" alt="cutie img"; style="padding-left: 500px;"></img>
     </p>
 
     <h1 style="font-size: 60px;
