--- a/HTML HW folder/2021.04.09/javademo.html
+++ b/HTML HW folder/2021.04.09/javademo.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <!--JavaScript 在這裏不會執行  -->
 </head>
 <body>
     <p id="Hello">Hello</p>
     <script>
-        document.getElementById("Hello").innerHTML ="Hello JavaScripts"
+        document.getElementById("Hello").innerHTML ="Hello JavaScripts";
+        document.getElementById("Hello").style.fontSize = "25px";
+        document.getElementById("Hello").style.fontStyle = "Monospace";
+        document.getElementById("Hello").style.color = "Cyan";
+
     </script>
 </body>
 </html>
